--- a/object-creation.html
+++ b/object-creation.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<head><title>Javascript</title></head>
+<body>
 <h1 id="object-creation">Object Creation</h1>
 <h3 id="factory-pattern">Factory Pattern:</h3>
 <pre><code class="javascript">function a(){
@@ -46,3 +49,4 @@ x.show();
 
 <h3 id="disadvantage_1">Disadvantage:</h3>
 <p>Here z and x both have their own copy of show() method i.e. it is not shared hence takes up memory. This can be overcomed by Prototype Pattern.</p>
+</body>
