--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head><title>Javascript</title></head>
+<style type="text/css">
+*{font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;}
+</style>
 <body>
 <h1 id="object-creation">Object Creation</h1>
 <h3 id="factory-pattern">Factory Pattern:</h3>
